Move rewrite-core tests from Kotlin to Java